2018-09-21  Justin Michaud  <justin_michaud@apple.com>

        Implement initialValue support for CSS Custom Properties and Values API
        https://bugs.webkit.org/show_bug.cgi?id=189819

        Reviewed by Simon Fraser.

        * css-custom-properties-api/initialValue-expected.html: Added.
        * css-custom-properties-api/initialValue.html: Added.
        * css-custom-properties-api/initialValueJS-expected.txt: Added.
        * css-custom-properties-api/initialValueJS.html: Added.
        * css-custom-properties-api/registerProperty-expected.txt:
        * css-custom-properties-api/registerProperty.html:
        * platform/win/TestExpectations:

2018-09-21  Ryan Haddad  <ryanhaddad@apple.com>

        [macOS EWS] Layout test accessibility/smart-invert-reference.html is a flaky failure
        https://bugs.webkit.org/show_bug.cgi?id=189818

        Unreviewed test gardening.

        * platform/mac-wk2/TestExpectations: Mark test as flaky.

2018-09-21  Ryosuke Niwa  <rniwa@webkit.org>

        Custom elements in a reaction queue can lose its JS wrapper and become HTMLUnknownElement
        https://bugs.webkit.org/show_bug.cgi?id=184307

        Reviewed by Keith Miller.

        Added a test for enqueuing a lot of custom elements into the reaction queue via innerHTML setter.
        WebKit should retain the JS wrappers of all custom elements.

        * fast/custom-elements/custom-elements-reaction-queue-retains-js-wrapper-expected.txt: Added.
        * fast/custom-elements/custom-elements-reaction-queue-retains-js-wrapper.html: Added.

2018-09-21  Chris Dumez  <cdumez@apple.com>

        Unreviewed, speed up storage/websql/transaction-database-expand-quota.html

        This test was so slow that is sometimes timed out on the debug bots.

        * storage/websql/transaction-database-expand-quota-expected.txt:
        * storage/websql/transaction-database-expand-quota.html:

2018-09-21  Ryan Haddad  <ryanhaddad@apple.com>
